files/styles.css
@import url('https://fonts.googleapis.com/css?family=Anonymous+Pro:700');

* {
        margin: 0;
        padding: 0;
        border: 0;
        outline: 0;
        font-size: 100%;
        vertical-align: baseline;
        background: transparent;
        user-select: none;
    }

html {
    background-color: hsl(0, 0%, 0%);
}

body {
    color: hsl(0, 0%, 80%);
    font-family:Arial, sans-serif;
    font-weight:bold;
    height:100%;
    width:100%;
    margin:0;
    padding:0px;
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-tap-highlight-color: transparent;
}

header {
    background: hsl(0, 0%, 0%);
    width: 100%;
    height: 4em;
    position: absolute;
    top: 0;
    left: 0;
    border-bottom: 4px solid hsl(0, 0%, 80%);
    z-index: 9999;
    font-size: 1.2em;
    box-shadow: 0px 5px 10px hsla(0, 0%, 0%, 0.2)
}

#logo {
	margin: 0.5em;
	float: left;
	width: 3em;
	height: 3em;
	background: url(https://www.ftek.se/wp-content/uploads/2017/06/f61718.png) no-repeat center;
    background-size: contain;
	display: block;
}

nav {
	position: absolute;
    top: 4em;
    display: none;
}

nav:hover {
    display: block;
}

nav ul.menu {
    margin: 0;
    padding: 0;
    font-size: 1.2em;
    width: 100vw;
}

nav ul.menu > li {
    list-style-type: none;
    background-color: white;
    border-bottom: 1px solid hsl(0, 0%, 80%);
}

nav ul.menu li {
    cursor: pointer;
}

nav ul.menu > li span {
    color: #000;
    padding: 1em;
    height: auto;
    display: block;
    line-height: 1em;
}

nav ul.menu > li:focus:before, nav ul.menu > li:hover:before {
    content: '';
    background-color: hsl(0, 0%, 80%);
    width: 0.3em;
    min-height: 3em;
    position: absolute;
}

nav ul.menu > li > span {
    transition: margin-left 0.2s ease-in-out;
}

nav ul.menu > li:hover > span {
    margin-left: 0.3em;
}


nav ul.menu > li > li > span {
    border-bottom: 1px solid hsl(0, 0%, 50%);
}

div.menu-button {
    margin: 0.5em;
    float: right;
    display: inline-block;
    cursor: pointer;
    padding: 0.6em 1.35em;
    width: 3em;
    height: 3em;
    box-sizing: border-box;
    background-color: hsla(0, 0%, 100%);
    border-radius: 3em;
    box-shadow: 5px 5px 20px hsla(0, 0%, 0%, 0.2);
    transition: background-color 0.2s ease-in-out;
}

div.menu-button:hover {
    background-color: hsla(0, 0%, 100%, 0.2);
}

.bar1, .bar2, .bar3 {
    margin-left: auto;
    width: 0.3em;
    height: 0.3em;
    background-color: hsl(0, 0%, 100%);
    margin: 0.25em 0;
    transition: 0.2s ease-in-out;
}

.bar1.close {
    transform: translateY(0.6em) translateX(0.05em) rotate(45deg) scaleX(6);
    transform-origin: center;
}
.bar2.close {
    opacity: 0;
}
.bar3.close {
    transform: translateY(-0.6em) translateX(0.05em) rotate(-45deg) scaleX(6);
    transform-origin: center;
}

footer {
    padding: 1em;
    color: hsl(0, 0%, 30%);
}

footer ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

footer ul li {
    display: inline;
    margin-right: 1em;
}

footer ul li a {
    text-decoration: none;
    color: hsl(0, 0%, 0%);
}

div.content {
    position: absolute;
    height: auto;
    width: 100%;
    /*top: 6em;*/
}

section.main {
    width: 80%;
    max-width:80%;
    margin: 1em auto;
    padding: 1em 2em;
    text-align: center;
    margin-top: 6em;
}

/* Loading icon */

@keyframes lds-dual-ring {
  0% {
    transform: rotate(0);
  }
  100% {
    transform: rotate(360deg);
  }
}
@-webkit-keyframes lds-dual-ring {
  0% {
    transform: rotate(0);
  }
  100% {
    transform: rotate(360deg);
  }
}
.loading-ring-big div {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    border: 4px solid #000;
    border-color: #e6e6e6 transparent #e6e6e6 transparent;
    animation: lds-dual-ring 1.3s linear infinite;
    transition: all 0.3s ease-in-out;
}
.loading-ring-big {
    width: 50px;
    height: 50px;
}

.loading-ring-button div {
    width: 52px;
    height: 52px;
    border-radius: 50%;
    border: 4px solid #000;
    border-color: #e6e6e6 transparent #e6e6e6 transparent;
    animation: lds-dual-ring 1.3s linear infinite;
    transition: all 0.3s ease-in-out;
    position: fixed;
    color: hsl(0,0%,15%);
}

.loading-ring-small div {
    width: 20px;
    height: 20px;
    border-radius: 50%;
    border: 2px solid #000;
    border-color: #e6e6e6 transparent #e6e6e6 transparent;
    animation: lds-dual-ring 1.3s linear infinite;
    transition: all 0.3s ease-in-out;
}

.loading-ring-small {
    width: 25px;
    height: 25px;
}

/*------
# Pincode
----*/

.cell {
    width: 100%;
    text-align: center;
}


#message {
    color: hsla(0, 100%, 60%, 1);
    min-height: 1.25em;
    transition: all 0.5s ease-in-out;
    opacity: 0;
    margin-top: 2em;
}

#message.show {
    opacity: 1;
}

#status {
    height: 2em;
    width: 50px;
    text-align: center;
    margin-top: 2em;
    margin-left: auto;
    margin-right: auto;
    transition: all 0.5s ease-in-out;
    opacity: 0;
}

#status.load {opacity: 1}

#numbers {
    max-width: 300px;
    padding: 0 20px;
    margin: 0 auto;
    position: relative;
    display: block;
    transition: all 0.5s ease-out;
    opacity: 1;
}

#numbers.load {
    opacity: 0.3;
}

#numbers.load button {
    transform: scale(1);
    background-color: hsl(0, 0%, 90%);
}

.cell button {
    cursor: pointer;
    width: 2.5em;
    height: 2.5em;
    margin-bottom: 0.5em;
    background-color: hsl(0, 0%, 90%);
    border: 0;
    color: #000;
    font-size: 1.5em;
    font-weight: bold;
    line-height: 1.5em;
    border-radius: 100%;
    opacity: 1;
    outline: 0;
    transition: all 0.1s linear;
}

.cell button:hover {
    transform: scale(1.05);
    background-color: hsl(0, 0%, 100%);
}

.cell button:active {
    transform: scale(0.95);
    background-color: hsl(0, 0%, 60%);
}


#fields {
    max-width: 12em;
    margin: 1em auto 2em auto;
}
/* ... */

